Set up a new API that gets a user sheet by ID to be used in search or profile preview
